--- a/app/index.html
+++ b/app/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 	<h2>test</h2>
-<script type="text/javascript" src="../bower_components/underscore/underscore-min.js"></script>
-<script type="text/javascript" src="../bower_components/backbone/backbone-min.js"></script>
+<script type="text/javascript" src="bower_components/underscore/underscore-min.js"></script>
+<script type="text/javascript" src="bower_components/backbone/backbone-min.js"></script>
 </body>
 </html>
