--- a/app/index.html
+++ b/app/index.html
@@ -2,24 +2,37 @@
 <html lang="en-US">
 <head>
 	<meta charset="UTF-8">
-	<title></title>
+	<title>NodeJS and Backbone simple CRUD</title>
+	<link href="bower_components/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="style.css" rel="stylesheet">
 </head>
 <body>
-	<h2>test</h2>
-    <div class="table" id="mytable">
-    </div>
+	<div class="container">
+		<h2>test</h2>
+		<div class="row">
+            <div class="col-md-9">
+                <div id="customersTable"></div>
+            </div>
+            <div class="col-md-3">
+                <div id="customerForm"></div>
+            </div>			
+		</div>
+	    
+	</div>
 
     <script type="text/template" id="viewCustomers">
         <h3>Customers list</h3>
-        <table>
+        <table class="table table-striped table-hover">
             <thead>
+            	<th>ID</th>
                 <th>First name</th>
                 <th>Last name</th>
                 <th>Date of birth</th>
                 <th>Company</th>
-                <th>Mobile Phone</th>
-                <th>Work Phone</th>
+                <th>Mobile phone</th>
+                <th>Work phone</th>
                 <th>Skype</th>
+                <th></th>
             </thead>
             <tbody class="customersList"></tbody>
         </table>
@@ -50,13 +63,17 @@
         <td class="skype">
             <%- skype %>
         </td>
+        <td>
+            <span class="glyphicon glyphicon-trash" aria-hidden="true"></span>
+        </td>
     </script>
 
     <script type="text/javascript" src="bower_components/jquery/dist/jquery.min.js"></script>
+    <script type="text/javascript" src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
     <script type="text/javascript" src="bower_components/underscore/underscore-min.js"></script>
     <script type="text/javascript" src="bower_components/backbone/backbone-min.js"></script>
-    <script type="text/javascript" src="collections/customers.js"></script>
     <script type="text/javascript" src="models/customer.js"></script>
+    <script type="text/javascript" src="collections/customers.js"></script>
     <script type="text/javascript" src="views/table.js"></script>
 
     <script type="text/javascript" src="app.js"></script>
