--- a/app/index.html
+++ b/app/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 	<div class="container">
-		<h2>test</h2>
+		<h2>View, create, <span class="not-implemented">update</span>, remove customers.</h2>
 		<div class="row">
             <div class="col-md-9">
                 <div id="customersTable"></div>
@@ -24,7 +24,6 @@
         <h3>Customers list</h3>
         <table class="table table-striped table-hover">
             <thead>
-            	<th>ID</th>
                 <th>First name</th>
                 <th>Last name</th>
                 <th>Date of birth</th>
@@ -39,9 +38,6 @@
     </script>
     
     <script type="text/template" id="viewCustomer">
-        <td>
-            <%- _id %>
-        </td>
         <td class="first">
             <%- name.first %>
         </td>
@@ -68,6 +64,34 @@
         </td>
     </script>
 
+    <script type="text/template" id="editCustomerView">
+        <div className="form-group">
+            <h3>Customer form</h3>
+            <label htmlFor="">First name
+                <input class="form-control" id="firstName" value="" type="text"/>
+            </label>
+            <label htmlFor="">Last name
+                <input class="form-control" id="lastName" value="" type="text"/>
+            </label>
+            <label htmlFor="">Date of birth
+                <input class="form-control" id="dateOfBirth" value="" type="text"/>
+            </label>
+            <label htmlFor="">Company
+                <input class="form-control" id="companyName" value="" type="text"/>
+            </label>
+            <label htmlFor="">Mobile phone
+                <input class="form-control" id="mobilePhone" value="" type="text"/>
+            </label>
+            <label htmlFor="">Work phone
+                <input class="form-control" id="workPhone" value="" type="text"/>
+            </label>
+            <label htmlFor="">Skype
+                <input class="form-control" id="skype" value="" type="text"/>
+            </label>
+            <button class="create">Create</button>
+        </div>
+    </script>
+
     <script type="text/javascript" src="bower_components/jquery/dist/jquery.min.js"></script>
     <script type="text/javascript" src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
     <script type="text/javascript" src="bower_components/underscore/underscore-min.js"></script>
@@ -75,6 +99,7 @@
     <script type="text/javascript" src="models/customer.js"></script>
     <script type="text/javascript" src="collections/customers.js"></script>
     <script type="text/javascript" src="views/table.js"></script>
+    <script type="text/javascript" src="views/form.js"></script>
 
     <script type="text/javascript" src="app.js"></script>
 </body>
